--- a/app/views/ecm/frontend/toplists/_list_item.html.erb
+++ b/app/views/ecm/frontend/toplists/_list_item.html.erb
@@ -9,7 +9,7 @@
   
   <h2 class="<%= list_item.class.to_s.underscore %>-name"><%= list_item.name %></h2>
   
-  <p class="<%= list_item.class.to_s.underscore %>-description"><%= list_item.description_teaser %><%= link_to t(:more), list_item %></p>
+  <p class="<%= list_item.class.to_s.underscore %>-description"><%=m list_item.description_teaser %><%= link_to t(:more), list_item %></p>
 </div>
 
 <hr />
