--- a/spec/dummy/app/views/top_djs/show.html.erb
+++ b/spec/dummy/app/views/top_djs/show.html.erb
@@ -1,3 +1,3 @@
 <%= render :partial => "item", :object => @object %>
 
-<%= link_to t('Back'), url_for(:back) %>
+<%= link_to t(:back), url_for(:back) %>
