--- a/app/views/ecm/frontend/toplists/_item.html.erb
+++ b/app/views/ecm/frontend/toplists/_item.html.erb
@@ -3,6 +3,6 @@
   <%= image_tag(item.main_image.url, { :class => "#{item.class.to_s.underscore}-main-image" }) if item.main_image? %>
   <p class="<%= item.class.to_s.underscore %>-description"><%=m item.description %></p>
   <% if item.link %>  
-    <p class="<%= item.class.to_s.underscore %>-link"><%= link_to item.link, item.link %></p>
+    <p class="<%= item.class.to_s.underscore %>-link"><%= link_to item.link, item.link, { :target => "_blank" } %></p>
   <% end %>  
 </div>
